--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -1,11 +1,16 @@
 % !TEX root = ../main.tex
 \section{Benchmarks}\label{sec:benchmarks}
 
+\gnote{Tables need to change to accomodate updated aggregate signature size. Possibly also need to update non-aggregate sizes and sigs because optimization gives different params}
+
 In this section, we define the parameters with which we instantiate Chipmunk and we provide various benchmarks, showing that our new construction significantly outperforms the previous Squirrel construction of Fleischhacker, Simkin, and Zhang~\cite{CCS:FleSimZha22}.
+
+Our concretely proposed construction uses the key-homomorphic one-time signature scheme for \autoref{fig:otsconstruction} and $\hvcencoded$ for the homomorphic vector commitment.
 
 \subsection{Parameters and Security Estimates}
 The dimension of the ring $\ring$ is fixed to $n=512$.
 The constraints that need to be satisfied by our parameters are summarized in Table \ref{tab:constraints}.
+The concrete efficiency for a given set of parameters is determined by Table \ref{tab:efficiencyfromparameters}, which also spells out where the contributions come from.
 To find such concrete parameters we used a script\footnote{\label{fn:github}\url{https://github.com/GottfriedHerold/Chipmunk}}, which enumerates possible parameters that satisfy all constraints, that lead to hard ring-SIS problems, and that allow for efficient NTT evaluations.
 For any choice of $\secpar\in\{112,128\}$, $\rho\in\NN$, and $\tau\in\NN$ our script finds the parameter set that allows for the smallest possible signature size.
 For convenience, the results of running the script for a range of reasonable input parameters are shown in \autoref{tab:param} in Appendix~\ref{sec:concreteparams}.\gnote{The bound from \autoref{lem:hvcprobhom} has changed; may need to re-run.}
@@ -18,15 +23,49 @@ For convenience, the results of running the script for a range of reasonable inp
    \autoref{lem:hvcprobhom}&$\bagg \geq$&$ \eta\sqrt{2\alpha_w\rho(\epsilon + 1 + \log_2 n + \log_2(2\tau \lceil\log_{2\eta+1}q\rceil + \xi\lceil\log_{2\eta+1}q'\rceil + 2\tau))\cdot\ln2}$\\
    \autoref{lem:kots_correct}& $\beta_\sigma \geq$&$ 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}$\\
    \autoref{lem:kots_sis}&$\abs{\tern_{\alpha_H}} \geq$&$ 2^{2\secpar}$\\
-   \autoref{lem:keyhidden}& $\gamma\geq$&$((3\secpar+\delta)/n+\log_2q)\log^{-1}_2(\varphi+\tfrac{1}{2})$\\
+   \autoref{lem:keyhidden}& $\gamma\geq$&$((3\secpar+\delta)/n+\log_2q')\log^{-1}_2(\varphi+\tfrac{1}{2})$ \gnote{Fixed $q\rightarrow q'$ here. Please double-check.}\\
    \autoref{lem:keyhidden}& $\abs{\tern_{\alpha_H}} \leq$&$ 2^{2\secpar + \delta}$\\
    \autoref{lem:nilssupportivechildsupport}&$q'>$&$ 16 \alpha_w \alpha_H\varphi$\\
    \autoref{lem:msigaggcorrect}&$\chi \geq$ &$\secpar/(\varepsilon-1)$\\
    \autoref{lem:msigunf}&$\abs{\tern_{\alpha_w}} \geq$&$2^\secpar$
   %\bottomrule
   \end{tabular}
+  \gnote{$\xi = 2\gamma$ is missing, from the connection of the HVC and KOTS. I suggest renaming $\gamma$, anyway.}
   \caption{The constraints a set of Chipmunk parameters needs to satisfy to ensure that the proofs are applicable. The parameters additionally need to be chose such that the associated Ring-SIS problems are hard.}\label{tab:constraints}
   \end{table}
+  
+\begin{table}
+ \centering
+ \begin{tabular}{cc@{\hskip 4ex}l}
+  \toprule
+  contribution & & size in bits\\
+  \midrule
+  \multirow{2}{*}{public parameters} & HVC: Ajtai's hash functions & $n(\xi\gamma' + 2\gamma)\ceiled{\log q}$\\\cline{2-3}
+                                     & KOTS & $n\cdot \frac12\xi \ceiled{\log q'}$\\
+  \hline                                  
+  public key                         & HVC commitment & $n\ceiled{\log q}$\\
+  \hline
+  secret key                         & $2^\tau$ KOTS keys & \emph{(may regenerate on the fly)}\\
+  \hline
+  \multirow{2}{*}{signatures (individual)} & KOTS signature & $n \ceiled{\log q'}$\\\cline{2-3}
+                                          & HVC opening   & $(\tau\limbs + \xi\limbs')n \ceiled{\log(2\eta+1)}$\\
+  \hline                                         
+  \multirow{3}{*}{aggregate signatures} & agg.\ KOTS signature & $n \ceiled{\log q'}$\\\cline{2-3}
+                                        & agg.\ HVC opening & $(\tau\limbs + \xi\limbs')n\ceiled{\log(2\eta+1)} + \tau\limbs n\ceiled{\log(\tfrac{\bagg}{\eta}+\tfrac12)}$\\\cline{2-3}
+                                        & index $j$ of aggregation attempt & $\ceiled {\log \chi}$\\
+ \hline
+ \end{tabular}
+ 
+ \bigskip % Remove together with gnote
+ \gnote{@Zhenfei: Please verify that this matches your scripts}
+ 
+ \smallskip% Remove together with gnote
+ \gnote{$\xi$ may be replaced by new variable for the HOTS length due to ambiguity of $\gamma$.}
+ 
+\caption{Space efficiency of Chipmunk as a function of the tunable parameters. $\limbs \coloneqq \ceiled{\log_{2\eta+1}q}$, $\limbs'\coloneqq \ceiled{\log_{2\eta+1}q'}$ }
+\label{tab:efficiencyfromparameters}
+\end{table}
+
   
 Let us briefly explain how our script works.
 First, to ensure security of Chipmunk, the specific ring-SIS problems in Lemma \ref{lem:hvcprobhom} and \ref{lem:kots_correct} need to be hard.
@@ -146,6 +185,9 @@ We conclude that the key generation time is no longer a bottleneck for practical
 \end{figure}
 
 \subsubsection{One Aggregate Signature under the Microscope.}
+
+\mbox{}\gnote{Needs rewriting and updating the actual numbers one optimization was run}.
+
 To better understand the size of Chipmunk aggregate signatures, we also inspected the sizes of the aggregate signature's individual components.
 For the sake of concreteness, let us just consider $\tau=21$ and $\rho=1024$.
 An aggregated signature of size $142$ Kilobytes, consists of the following components.
